--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,7 +73,6 @@ jobs:
           msbuild src/RhythmCore/RhythmCore.sln /t:Restore /p:Configuration="${{ matrix.config }}"
           msbuild src/RhythmRevit/RhythmRevit.sln /t:Restore /p:Configuration="${{ matrix.config }}"
           msbuild src/RhythmUI/RhythmUI.sln /t:Restore /p:Configuration="${{ matrix.config }}"
-          msbuild src/RhythmExtension/RhythmExtension.sln /t:Restore /p:Configuration="${{ matrix.config }}"
         }
         if ("${{ matrix.revit-version }}" -eq "R24" -or "${{ matrix.revit-version }}" -eq "R25" -or "${{ matrix.revit-version }}" -eq "R26") {
           if ("${{ matrix.revit-version }}" -eq "R25" -or "${{ matrix.revit-version }}" -eq "R26") {
@@ -117,7 +116,7 @@ jobs:
         if ("${{ matrix.revit-version }}" -eq "R25" -or "${{ matrix.revit-version }}" -eq "R26") {
           dotnet build src/RhythmExtension/RhythmExtension.sln --configuration "${{ matrix.config }}" --no-restore
         } else {
-          msbuild src/RhythmExtension/RhythmExtension.sln /p:Configuration="${{ matrix.config }}" /p:Platform="AnyCPU" /t:Build
+          Write-Host "Skipping RhythmExtension build for ${{ matrix.revit-version }} (not supported)"
         }
       shell: pwsh
     
