--- a/src/RhythmRevit/RhythmRevit.csproj
+++ b/src/RhythmRevit/RhythmRevit.csproj
@@ -1,8 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <!--   <TargetFramework>net48</TargetFramework>-->
-  <TargetFrameworks>net8.0-windows</TargetFrameworks>
         <OutputType>Library</OutputType>
         <RootNamespace>Rhythm</RootNamespace>
         <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
@@ -24,14 +22,14 @@
         <DebugSymbols>true</DebugSymbols>
         <DebugType>full</DebugType>
         <DefineConstants>$(DefineConstants);R20;R20_OR_GREATER</DefineConstants>
-		<TargetFrameworkVersion>net48</TargetFrameworkVersion>
+		<TargetFramework>net48</TargetFramework>
     </PropertyGroup>
     <PropertyGroup Condition="$(Configuration.Contains('Release R20'))">
         <DynamoVersion>2.3</DynamoVersion>
         <DynamoOutput>2.3</DynamoOutput>
         <RevitVersion>2020</RevitVersion>
         <DefineConstants>$(DefineConstants);R20;R20_OR_GREATER</DefineConstants>
-		<TargetFrameworkVersion>net48</TargetFrameworkVersion>
+		<TargetFramework>net48</TargetFramework>
     </PropertyGroup>
     <PropertyGroup Condition="$(Configuration.Contains('Debug R21'))">
         <DynamoVersion>2.6</DynamoVersion>
@@ -40,14 +38,14 @@
         <DebugSymbols>true</DebugSymbols>
         <DebugType>full</DebugType>
         <DefineConstants>$(DefineConstants);R21;R20_OR_GREATER;R21_OR_GREATER</DefineConstants>
-		<TargetFrameworkVersion>net48</TargetFrameworkVersion>
+		<TargetFramework>net48</TargetFramework>
     </PropertyGroup>
     <PropertyGroup Condition="$(Configuration.Contains('Release R21'))">
         <DynamoVersion>2.6</DynamoVersion>
         <DynamoOutput>2.6</DynamoOutput>
         <RevitVersion>2021</RevitVersion>
         <DefineConstants>$(DefineConstants);R21;R20_OR_GREATER;R21_OR_GREATER</DefineConstants>
-		<TargetFrameworkVersion>net48</TargetFrameworkVersion>
+		<TargetFramework>net48</TargetFramework>
     </PropertyGroup>
     <PropertyGroup Condition="$(Configuration.Contains('Debug R22'))">
         <DynamoVersion>2.12</DynamoVersion>
@@ -56,14 +54,14 @@
         <DebugSymbols>true</DebugSymbols>
         <DebugType>full</DebugType>
         <DefineConstants>$(DefineConstants);R22;R20_OR_GREATER;R21_OR_GREATER;R22_OR_GREATER</DefineConstants>
-		<TargetFrameworkVersion>net48</TargetFrameworkVersion>
+		<TargetFramework>net48</TargetFramework>
     </PropertyGroup>
     <PropertyGroup Condition="$(Configuration.Contains('Release R22'))">
         <DynamoVersion>2.12</DynamoVersion>
         <DynamoOutput>2.12</DynamoOutput>
         <RevitVersion>2022</RevitVersion>
         <DefineConstants>$(DefineConstants);R22;R20_OR_GREATER;R21_OR_GREATER;R22_OR_GREATER</DefineConstants>
-		<TargetFrameworkVersion>net48</TargetFrameworkVersion>
+		<TargetFramework>net48</TargetFramework>
     </PropertyGroup>
     <PropertyGroup Condition="$(Configuration.Contains('Debug R23'))">
         <DynamoVersion>2.13</DynamoVersion>
@@ -72,28 +70,28 @@
         <DebugSymbols>true</DebugSymbols>
         <DebugType>full</DebugType>
         <DefineConstants>$(DefineConstants);R23;R20_OR_GREATER;R21_OR_GREATER;R22_OR_GREATER;R23_OR_GREATER</DefineConstants>
-		<TargetFrameworkVersion>net48</TargetFrameworkVersion>
+		<TargetFramework>net48</TargetFramework>
 	</PropertyGroup>
     <PropertyGroup Condition="$(Configuration.Contains('Release R23'))">
         <DynamoVersion>2.13</DynamoVersion>
         <DynamoOutput>2.13</DynamoOutput>
         <RevitVersion>2023</RevitVersion>
         <DefineConstants>$(DefineConstants);R23;R20_OR_GREATER;R21_OR_GREATER;R22_OR_GREATER;R23_OR_GREATER</DefineConstants>
-		<TargetFrameworkVersion>net48</TargetFrameworkVersion>
+		<TargetFramework>net48</TargetFramework>
     </PropertyGroup>
 	<PropertyGroup Condition="$(Configuration.Contains('Debug R24'))">
-        <DynamoVersion>2.18</DynamoVersion>
-        <DynamoOutput>2.18</DynamoOutput>
+        <DynamoVersion>2.19</DynamoVersion>
+        <DynamoOutput>2.19</DynamoOutput>
         <RevitVersion>2024</RevitVersion>
         <DefineConstants>$(DefineConstants);R24;R20_OR_GREATER;R21_OR_GREATER;R22_OR_GREATER;R23_OR_GREATER;R24_OR_GREATER</DefineConstants>
-		<TargetFrameworkVersion>net48</TargetFrameworkVersion>
+		<TargetFramework>net48</TargetFramework>
     </PropertyGroup>
     <PropertyGroup Condition="$(Configuration.Contains('Release R24'))">
-        <DynamoVersion>2.18</DynamoVersion>
-        <DynamoOutput>2.18</DynamoOutput>
+        <DynamoVersion>2.19</DynamoVersion>
+        <DynamoOutput>2.19</DynamoOutput>
         <RevitVersion>2024</RevitVersion>
         <DefineConstants>$(DefineConstants);R24;R20_OR_GREATER;R21_OR_GREATER;R22_OR_GREATER;R23_OR_GREATER;R24_OR_GREATER</DefineConstants>
-		<TargetFrameworkVersion>net48</TargetFrameworkVersion>
+		<TargetFramework>net48</TargetFramework>
     </PropertyGroup>
 	<PropertyGroup Condition="$(Configuration.Contains('Debug R25'))">
         <DynamoVersion>3.0</DynamoVersion>
