--- a/src/RhythmCore/RhythmCore.csproj
+++ b/src/RhythmCore/RhythmCore.csproj
@@ -7,8 +7,8 @@
         <UseWPF>true</UseWPF>
         <PlatformTarget>x64</PlatformTarget>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-        <Configurations>Debug R24;Debug R20;Debug R21;Debug R22;Debug R23;Debug R25;</Configurations>
-        <Configurations>$(Configurations)Release R24;Release R20;Release R21;Release R22;Release R23;Release R25;</Configurations>
+        <Configurations>Debug R24;Debug R20;Debug R21;Debug R22;Debug R23;Debug R25;Debug R26;</Configurations>
+        <Configurations>$(Configurations)Release R24;Release R20;Release R21;Release R22;Release R23;Release R25;Release R26;</Configurations>
         <NoWarn>MSB3277;CS1591</NoWarn>
   </PropertyGroup>
  <PropertyGroup Condition="$(Configuration.Contains('Debug R20'))">
@@ -103,6 +103,22 @@
         <DefineConstants>$(DefineConstants);R25;R20_OR_GREATER;R21_OR_GREATER;R22_OR_GREATER;R23_OR_GREATER;R24_OR_GREATER;R25_OR_GREATER</DefineConstants>
 		<TargetFramework>net7.0-windows</TargetFramework>
     </PropertyGroup>
+	<PropertyGroup Condition="$(Configuration.Contains('Debug R26'))">
+        <DynamoVersion>3.0</DynamoVersion>
+        <DynamoOutput>3.0</DynamoOutput>
+        <RevitVersion>2026</RevitVersion>
+        <DebugSymbols>true</DebugSymbols>
+        <DebugType>full</DebugType>
+        <DefineConstants>$(DefineConstants);R26;R20_OR_GREATER;R21_OR_GREATER;R22_OR_GREATER;R23_OR_GREATER;R24_OR_GREATER;R25_OR_GREATER;R26_OR_GREATER</DefineConstants>
+		<TargetFramework>net7.0-windows</TargetFramework>
+    </PropertyGroup>
+    <PropertyGroup Condition="$(Configuration.Contains('Release R26'))">
+        <DynamoVersion>3.0</DynamoVersion>
+        <DynamoOutput>3.0</DynamoOutput>
+        <RevitVersion>2026</RevitVersion>
+        <DefineConstants>$(DefineConstants);R26;R20_OR_GREATER;R21_OR_GREATER;R22_OR_GREATER;R23_OR_GREATER;R24_OR_GREATER;R25_OR_GREATER;R26_OR_GREATER</DefineConstants>
+		<TargetFramework>net7.0-windows</TargetFramework>
+    </PropertyGroup>
    <PropertyGroup>
         <DynVersion>$(DynamoVersion)</DynVersion>
         <BuildOutput>$(DynamoOutput)</BuildOutput>
@@ -137,6 +153,9 @@
 	 <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug R25|AnyCPU'">
 	   <Optimize>True</Optimize>
 	 </PropertyGroup>
+	 <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug R26|AnyCPU'">
+	   <Optimize>True</Optimize>
+	 </PropertyGroup>
 	 <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release R24|AnyCPU'">
 	   <Optimize>True</Optimize>
 	 </PropertyGroup>
@@ -155,7 +174,10 @@
 	 <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release R25|AnyCPU'">
 	   <Optimize>True</Optimize>
 	 </PropertyGroup>
-  <ItemGroup Condition="'$(Configuration)|$(Platform)'!='Release R25|AnyCPU'">
+	 <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release R26|AnyCPU'">
+	   <Optimize>True</Optimize>
+	 </PropertyGroup>
+  <ItemGroup Condition="'$(Configuration)|$(Platform)'!='Release R25|AnyCPU' And '$(Configuration)|$(Platform)'!='Debug R25|AnyCPU' And '$(Configuration)|$(Platform)'!='Release R26|AnyCPU' And '$(Configuration)|$(Platform)'!='Debug R26|AnyCPU'">
    <PackageReference Include="DynamoVisualProgramming.Core" Version="$(DynVersion).*" />
    <PackageReference Include="DynamoVisualProgramming.DynamoCoreNodes" Version="$(DynVersion).*" />
    <PackageReference Include="DynamoVisualProgramming.ZeroTouchLibrary" Version="$(DynVersion).*" />
@@ -175,7 +197,7 @@
    <PackageReference Include="Markov" Version="2.0.0" />
    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)|$(Platform)'=='Release R25|AnyCPU' Or '$(Configuration)|$(Platform)'=='Release R25|AnyCPU'">
+  <ItemGroup Condition="'$(Configuration)|$(Platform)'=='Release R25|AnyCPU' Or '$(Configuration)|$(Platform)'=='Debug R25|AnyCPU' Or '$(Configuration)|$(Platform)'=='Release R26|AnyCPU' Or '$(Configuration)|$(Platform)'=='Debug R26|AnyCPU'">
         <PackageReference Include="DynamoVisualProgramming.DynamoCoreNodes" Version="3.0.0-beta6885" />
 		<PackageReference Include="DynamoVisualProgramming.Core" Version="3.0.0-beta6885" />
 		<PackageReference Include="DynamoVisualProgramming.ZeroTouchLibrary" Version="3.0.0-beta6885" />
@@ -194,15 +216,19 @@
    <PackageReference Include="Humanizer.Core" Version="2.14.1" />
    <PackageReference Include="Markov" Version="2.0.0" />
     </ItemGroup>
-	<Target Name="CopyFiles" AfterTargets="CoreBuild">
+	<Target Name="CopyFiles" AfterTargets="Build">
         <Message Text="Build Revit Version $(RevitVersion)" Importance="high" />
         <ItemGroup>
             <AssemblyFiles Include="$(TargetDir)RhythmCore.dll" />
             <AssemblyFiles Include="$(TargetDir)*.xml" />
         </ItemGroup>
-        <Message Text="Copying From $(TargetDir) To $(FolderPackages)" Importance="high" />
-        <Copy SourceFiles="@(AssemblyFiles)" DestinationFolder="$(ProjectDir)..\..\deploy\$(RevitVersion)" />
-        <Message Text="Copied Completed" Importance="high" />
+        <PropertyGroup>
+            <DeployFolder>$(ProjectDir)..\..\deploy\$(RevitVersion)</DeployFolder>
+        </PropertyGroup>
+        <MakeDir Directories="$(DeployFolder)" Condition="!Exists('$(DeployFolder)')" />
+        <Message Text="Copying From $(TargetDir) To $(DeployFolder)" Importance="high" />
+        <Copy SourceFiles="@(AssemblyFiles)" DestinationFolder="$(DeployFolder)" SkipUnchangedFiles="true" />
+        <Message Text="Copy Completed" Importance="high" />
     </Target>
 	<Target Name="CreateNodeIcons" AfterTargets="PostBuildEvent">
   <!-- Get System.Drawing.dll -->
